--- a/index.html
+++ b/index.html
@@ -3767,7 +3767,11 @@
                         if (masterPrize) {
                             console.log('masterPrize.id:', masterPrize.id);
                             console.log('masterPrize.name:', masterPrize.name);
+                            console.log('masterPrize 全データ:', masterPrize);
                             console.log('masterPrize.imageUrl:', masterPrize.imageUrl || '(undefined)');
+                            console.log('masterPrize.imageURL:', masterPrize.imageURL || '(undefined)');
+                            console.log('masterPrize.image:', masterPrize.image || '(undefined)');
+                            console.log('masterPrize.url:', masterPrize.url || '(undefined)');
                         }
                         console.log('最終的な画像URL:', imageUrl || '(なし)');
                         console.log('========================================');
